fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,50 @@
 * text=auto !eol
 /COPYRIGHT -text
+DEVELOPER/Makefile -text
+DEVELOPER/Makefile.def -text
+DEVELOPER/WindowsInstructions.txt -text
+DEVELOPER/coreList -text
+DEVELOPER/element/Makefile -text
+DEVELOPER/element/c/Makefile -text
+DEVELOPER/element/c/example1.tcl -text
+DEVELOPER/element/c/trussC.c -text
+DEVELOPER/element/cpp/Makefile -text
+DEVELOPER/element/cpp/Truss2D.cpp -text
+DEVELOPER/element/cpp/Truss2D.h -text
+DEVELOPER/element/cpp/example1.tcl -text
+DEVELOPER/element/fortran/Makefile -text
+DEVELOPER/element/fortran/elementAPI.f -text
+DEVELOPER/element/fortran/elementTypes.f -text
+DEVELOPER/element/fortran/example1.tcl -text
+DEVELOPER/element/fortran/trussF.f -text
+DEVELOPER/integrator/Makefile -text
+DEVELOPER/integrator/Trapezoidal.cpp -text
+DEVELOPER/integrator/Trapezoidal.h -text
+DEVELOPER/integrator/example1.tcl -text
+DEVELOPER/makeCore.tcl -text
+DEVELOPER/material/Makefile -text
+DEVELOPER/material/c/Makefile -text
+DEVELOPER/material/c/elasticPPC.c -text
+DEVELOPER/material/c/elasticPlaneStressC.c -text
+DEVELOPER/material/c/example1.tcl -text
+DEVELOPER/material/c/example2.tcl -text
+DEVELOPER/material/cpp/ElasticPPCPP.cpp -text
+DEVELOPER/material/cpp/ElasticPPCPP.h -text
+DEVELOPER/material/cpp/Makefile -text
+DEVELOPER/material/cpp/example1.tcl -text
+DEVELOPER/material/fortran/Makefile -text
+DEVELOPER/material/fortran/elasticPPf.f -text
+DEVELOPER/material/fortran/example1.tcl -text
+DEVELOPER/material/fortran/materialAPI.f -text
+DEVELOPER/material/fortran/materialTypes.f -text
+DEVELOPER/recorder/Makefile -text
+DEVELOPER/recorder/SumElementForcesRecorder.cpp -text
+DEVELOPER/recorder/SumElementForcesRecorder.h -text
+DEVELOPER/recorder/example1.tcl -text
+DEVELOPER/system/Makefile -text
+DEVELOPER/system/SkylineSPD.cpp -text
+DEVELOPER/system/SkylineSPD.h -text
+DEVELOPER/system/example1.tcl -text
 EXAMPLES/3D-el-pl-Examples/Makefile -text
 EXAMPLES/3D-el-pl-Examples/main.cpp -text
 EXAMPLES/3D-el-pl-Examples/main_ElasticIsotropic3D.cpp -text
