--- a/.gitattributes
+++ b/.gitattributes
@@ -52,6 +52,8 @@ DEVELOPER/core/FE_Element.h -text
 DEVELOPER/core/Fiber.h -text
 DEVELOPER/core/FiberResponse.cpp -text
 DEVELOPER/core/FiberResponse.h -text
+DEVELOPER/core/File.cpp -text
+DEVELOPER/core/File.h -text
 DEVELOPER/core/G3Globals.h -text
 DEVELOPER/core/Graph.cpp -text
 DEVELOPER/core/Graph.h -text
