--- a/.gitattributes
+++ b/.gitattributes
@@ -438,6 +438,7 @@ MAKES/Makefile.def.ABE -text
 MAKES/Makefile.def.ALPHA -text
 MAKES/Makefile.def.DATASTAR -text
 MAKES/Makefile.def.EC2-FEDORA4 -text
+MAKES/Makefile.def.EC2-UBUNTU -text
 MAKES/Makefile.def.FEDORA3 -text
 MAKES/Makefile.def.FEDORA4 -text
 MAKES/Makefile.def.LINUX -text
