--- a/.gitattributes
+++ b/.gitattributes
@@ -2012,7 +2012,11 @@ SRC/element/UWelements/BeamEndContact3D.cpp -text
 SRC/element/UWelements/BeamEndContact3D.h -text
 SRC/element/UWelements/BeamEndContact3Dp.cpp -text
 SRC/element/UWelements/BeamEndContact3Dp.h -text
+SRC/element/UWelements/Brick8FiberOverlay.cpp -text
+SRC/element/UWelements/Brick8FiberOverlay.h -text
 SRC/element/UWelements/Makefile -text
+SRC/element/UWelements/Quad4FiberOverlay.cpp -text
+SRC/element/UWelements/Quad4FiberOverlay.h -text
 SRC/element/UWelements/SSPbrick.cpp -text
 SRC/element/UWelements/SSPbrick.h -text
 SRC/element/UWelements/SSPbrickUP.cpp -text
