fmk adding new MP example

--- a/.gitattributes
+++ b/.gitattributes
@@ -414,6 +414,69 @@ EXAMPLES/ShadowTruss/ShadowActorTruss.h -text
 EXAMPLES/ShadowTruss/ShadowTruss.cpp -text
 EXAMPLES/ShadowTruss/ShadowTruss.h -text
 EXAMPLES/ShadowTruss/run.tcl -text
+EXAMPLES/SmallMP/Example.tcl -text
+EXAMPLES/SmallMP/GM/A-BEN360.AT2 -text
+EXAMPLES/SmallMP/GM/A-BPL160.AT2 -text
+EXAMPLES/SmallMP/GM/A-ELC180.AT2 -text
+EXAMPLES/SmallMP/GM/A-LAD180.AT2 -text
+EXAMPLES/SmallMP/GM/A-LVD000.AT2 -text
+EXAMPLES/SmallMP/GM/A-LVL090.AT2 -text
+EXAMPLES/SmallMP/GM/A-MAM290.AT2 -text
+EXAMPLES/SmallMP/GM/A-PAS180.AT2 -text
+EXAMPLES/SmallMP/GM/A-PEL180.AT2 -text
+EXAMPLES/SmallMP/GM/A-SHE009.AT2 -text
+EXAMPLES/SmallMP/GM/A-SON303.AT2 -text
+EXAMPLES/SmallMP/GM/A-TIN000.AT2 -text
+EXAMPLES/SmallMP/GM/A-ZAK360.AT2 -text
+EXAMPLES/SmallMP/GM/ANLA196.AT2 -text
+EXAMPLES/SmallMP/GM/ANLCSOU.AT2 -text
+EXAMPLES/SmallMP/GM/AZF225.AT2 -text
+EXAMPLES/SmallMP/GM/B-BEN360.AT2 -text
+EXAMPLES/SmallMP/GM/B-ELC000.AT2 -text
+EXAMPLES/SmallMP/GM/B-LAD180.AT2 -text
+EXAMPLES/SmallMP/GM/B-SHE009.AT2 -text
+EXAMPLES/SmallMP/GM/B-ZAK360.AT2 -text
+EXAMPLES/SmallMP/GM/BAR315.AT2 -text
+EXAMPLES/SmallMP/GM/D-ZAK360.AT2 -text
+EXAMPLES/SmallMP/GM/EIL-EW.AT2 -text
+EXAMPLES/SmallMP/GM/EUR090.AT2 -text
+EXAMPLES/SmallMP/GM/FOR090.AT2 -text
+EXAMPLES/SmallMP/GM/GCN-WE.AT2 -text
+EXAMPLES/SmallMP/GM/HAD-NS.AT2 -text
+EXAMPLES/SmallMP/GM/HAU000.AT2 -text
+EXAMPLES/SmallMP/GM/HEN-E.AT2 -text
+EXAMPLES/SmallMP/GM/HOS180.AT2 -text
+EXAMPLES/SmallMP/GM/HWA002-N.AT2 -text
+EXAMPLES/SmallMP/GM/HWA012-N.AT2 -text
+EXAMPLES/SmallMP/GM/HWA013-N.AT2 -text
+EXAMPLES/SmallMP/GM/HWA017-N.AT2 -text
+EXAMPLES/SmallMP/GM/HWA036-N.AT2 -text
+EXAMPLES/SmallMP/GM/HWA037-N.AT2 -text
+EXAMPLES/SmallMP/GM/HWA053-N.AT2 -text
+EXAMPLES/SmallMP/GM/HWA058-N.AT2 -text
+EXAMPLES/SmallMP/GM/ISE-WE.AT2 -text
+EXAMPLES/SmallMP/GM/KAU008-N.AT2 -text
+EXAMPLES/SmallMP/GM/KAU020-N.AT2 -text
+EXAMPLES/SmallMP/GM/KAU030-N.AT2 -text
+EXAMPLES/SmallMP/GM/KAU046-N.AT2 -text
+EXAMPLES/SmallMP/GM/KAU054-N.AT2 -text
+EXAMPLES/SmallMP/GM/KAU057-N.AT2 -text
+EXAMPLES/SmallMP/GM/KAU082-N.AT2 -text
+EXAMPLES/SmallMP/GM/KAU086-N.AT2 -text
+EXAMPLES/SmallMP/GM/NSK-E.AT2 -text
+EXAMPLES/SmallMP/GM/NST-N.AT2 -text
+EXAMPLES/SmallMP/GM/PBFEAS.AT2 -text
+EXAMPLES/SmallMP/GM/PFT135.AT2 -text
+EXAMPLES/SmallMP/GM/RIO270.AT2 -text
+EXAMPLES/SmallMP/GM/ROC-NS.AT2 -text
+EXAMPLES/SmallMP/GM/SGL-E.AT2 -text
+EXAMPLES/SmallMP/GM/SHL000.AT2 -text
+EXAMPLES/SmallMP/GM/SSD-E.AT2 -text
+EXAMPLES/SmallMP/GM/WGK-N.AT2 -text
+EXAMPLES/SmallMP/GM/WTC-E.AT2 -text
+EXAMPLES/SmallMP/ReadRecord.tcl -text
+EXAMPLES/SmallMP/analysis.tcl -text
+EXAMPLES/SmallMP/model.tcl -text
 EXAMPLES/TclPlaneTruss/Makefile -text
 EXAMPLES/TclPlaneTruss/MyTruss.cpp -text
 EXAMPLES/TclPlaneTruss/MyTruss.h -text
