fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -3915,6 +3915,7 @@ SRC/utility/Timer.tex -text
 SRC/utility/utility.tex -text
 Win32/DoddRestrepo/DoddRestrepo/DoddRestrepo.vfproj -text
 Win32/OpenSees.opt -text
+Win32/OpenSees.sln -text
 Win32/OpenSeesFortran.mak -text
 Win32/OpenSeesFortran.mdp -text svneol=unset#unset
 Win32/OpenSeesVC2005.sln -text
