--- a/.gitattributes
+++ b/.gitattributes
@@ -477,6 +477,7 @@ EXAMPLES/SmallMP/GM/WTC-E.AT2 -text
 EXAMPLES/SmallMP/ReadRecord.tcl -text
 EXAMPLES/SmallMP/analysis.tcl -text
 EXAMPLES/SmallMP/model.tcl -text
+EXAMPLES/SmallMP/qTestMP -text
 EXAMPLES/TclPlaneTruss/Makefile -text
 EXAMPLES/TclPlaneTruss/MyTruss.cpp -text
 EXAMPLES/TclPlaneTruss/MyTruss.h -text
