--- a/SRC/domain/pattern/Makefile
+++ b/SRC/domain/pattern/Makefile
@@ -15,6 +15,7 @@ OBJS       = $(RELIABILITY_OBJS) \
 	EarthquakePattern.o \
 	LinearSeries.o \
 	LoadPattern.o \
+	FireLoadPattern.o \
 	LoadPatternIter.o \
 	PathSeries.o \
 	PathTimeSeries.o \
