--- a/SRC/domain/load/Makefile
+++ b/SRC/domain/load/Makefile
@@ -3,7 +3,7 @@ include ../../../Makefile.def
 OBJS       = Load.o ElementalLoadIter.o NodalLoadIter.o \
 	Beam2dUniformLoad.o Beam2dPointLoad.o \
 	Beam3dUniformLoad.o Beam3dPointLoad.o \
-	BrickSelfWeight.o Beam2dTempLoad.o \
+	BrickSelfWeight.o Beam2dTempLoad.o Beam2dThermalAction.o \
 	SurfaceLoader.o SelfWeight.o
 
 # Compilation control
