fmk - changes for ModIMK...

--- a/SRC/material/uniaxial/Makefile
+++ b/SRC/material/uniaxial/Makefile
@@ -72,6 +72,8 @@ include ../../../Makefile.def
 	SAWSMaterial.o \
 	ConfinedConcrete01.o \
 	ConfinedConcrete02.o \
+	ModIMKPeakOriented.o \
+	ModIMKPinching.o \
 	pyUCLA.o \
 	Dodd_Restrepo.o DoddRestrepo.o \
         TclModelBuilderUniaxialMaterialCommand.o
