--- a/SRC/domain/component/Makefile
+++ b/SRC/domain/component/Makefile
@@ -8,6 +8,8 @@ OBJS       = DomainComponent.o \
 	TclParameterCommands.o \
 	MaterialStageParameter.o \
 	MatParameter.o \
+	InitialStateParameter.o \
+	ElementStateParameter.o \
 	TclUpdateMaterialCommand.o
 
 # Compilation control
