--- a/.gitattributes
+++ b/.gitattributes
@@ -2053,6 +2053,11 @@ SRC/element/Information.h -text
 SRC/element/Makefile -text
 SRC/element/NewElement.cpp -text
 SRC/element/NewElement.h -text
+SRC/element/PFEMElement/Makefile -text
+SRC/element/PFEMElement/PFEMElement2D.cpp -text
+SRC/element/PFEMElement/PFEMElement2D.h -text
+SRC/element/PFEMElement/TclModelBuilder_addPFEMElement.cpp -text
+SRC/element/PFEMElement/TclModelBuilder_addPFEMElement.h -text
 SRC/element/TclElementCommands.cpp -text
 SRC/element/UP-ucsd/BBarBrickUP.cpp -text
 SRC/element/UP-ucsd/BBarBrickUP.h -text
