Adding pressure constraint for PFEM

--- a/.gitattributes
+++ b/.gitattributes
@@ -1845,6 +1845,8 @@ SRC/domain/constraints/MP_Constraint.cpp -text
 SRC/domain/constraints/MP_Constraint.h -text
 SRC/domain/constraints/MP_Constraint.tex -text
 SRC/domain/constraints/Makefile -text
+SRC/domain/constraints/Pressure_Constraint.cpp -text
+SRC/domain/constraints/Pressure_Constraint.h -text
 SRC/domain/constraints/RigidBeam.cpp -text
 SRC/domain/constraints/RigidBeam.h -text
 SRC/domain/constraints/RigidDiaphragm.cpp -text
