Adding pressure constraint iterator

--- a/.gitattributes
+++ b/.gitattributes
@@ -1866,6 +1866,7 @@ SRC/domain/domain/MP_ConstraintIter.h -text
 SRC/domain/domain/Makefile -text
 SRC/domain/domain/NodeIter.h -text
 SRC/domain/domain/ParameterIter.h -text
+SRC/domain/domain/Pressure_ConstraintIter.h -text
 SRC/domain/domain/SP_ConstraintIter.h -text
 SRC/domain/domain/SubdomainIter.h -text
 SRC/domain/domain/partitioned/Makefile -text
@@ -1888,6 +1889,8 @@ SRC/domain/domain/single/SingleDomMP_Iter.cpp -text
 SRC/domain/domain/single/SingleDomMP_Iter.h -text
 SRC/domain/domain/single/SingleDomNodIter.cpp -text
 SRC/domain/domain/single/SingleDomNodIter.h -text
+SRC/domain/domain/single/SingleDomPC_Iter.cpp -text
+SRC/domain/domain/single/SingleDomPC_Iter.h -text
 SRC/domain/domain/single/SingleDomParamIter.cpp -text
 SRC/domain/domain/single/SingleDomParamIter.h -text
 SRC/domain/domain/single/SingleDomSP_Iter.cpp -text
