Adding CSPARSE solver

--- a/.gitattributes
+++ b/.gitattributes
@@ -690,6 +690,61 @@ OTHER/CBLAS/dzasum.c -text
 OTHER/CBLAS/dznrm2.c -text
 OTHER/CBLAS/f2c.h -text
 OTHER/CBLAS/idamax.c -text
+OTHER/CSPARSE/License.txt -text
+OTHER/CSPARSE/Makefile -text
+OTHER/CSPARSE/README.txt -text
+OTHER/CSPARSE/cs.h -text
+OTHER/CSPARSE/cs_add.c -text
+OTHER/CSPARSE/cs_amd.c -text
+OTHER/CSPARSE/cs_chol.c -text
+OTHER/CSPARSE/cs_cholsol.c -text
+OTHER/CSPARSE/cs_compress.c -text
+OTHER/CSPARSE/cs_counts.c -text
+OTHER/CSPARSE/cs_cumsum.c -text
+OTHER/CSPARSE/cs_dfs.c -text
+OTHER/CSPARSE/cs_dmperm.c -text
+OTHER/CSPARSE/cs_droptol.c -text
+OTHER/CSPARSE/cs_dropzeros.c -text
+OTHER/CSPARSE/cs_dupl.c -text
+OTHER/CSPARSE/cs_entry.c -text
+OTHER/CSPARSE/cs_ereach.c -text
+OTHER/CSPARSE/cs_etree.c -text
+OTHER/CSPARSE/cs_fkeep.c -text
+OTHER/CSPARSE/cs_gaxpy.c -text
+OTHER/CSPARSE/cs_happly.c -text
+OTHER/CSPARSE/cs_house.c -text
+OTHER/CSPARSE/cs_ipvec.c -text
+OTHER/CSPARSE/cs_leaf.c -text
+OTHER/CSPARSE/cs_load.c -text
+OTHER/CSPARSE/cs_lsolve.c -text
+OTHER/CSPARSE/cs_ltsolve.c -text
+OTHER/CSPARSE/cs_lu.c -text
+OTHER/CSPARSE/cs_lusol.c -text
+OTHER/CSPARSE/cs_malloc.c -text
+OTHER/CSPARSE/cs_maxtrans.c -text
+OTHER/CSPARSE/cs_multiply.c -text
+OTHER/CSPARSE/cs_norm.c -text
+OTHER/CSPARSE/cs_permute.c -text
+OTHER/CSPARSE/cs_pinv.c -text
+OTHER/CSPARSE/cs_post.c -text
+OTHER/CSPARSE/cs_print.c -text
+OTHER/CSPARSE/cs_pvec.c -text
+OTHER/CSPARSE/cs_qr.c -text
+OTHER/CSPARSE/cs_qrsol.c -text
+OTHER/CSPARSE/cs_randperm.c -text
+OTHER/CSPARSE/cs_reach.c -text
+OTHER/CSPARSE/cs_scatter.c -text
+OTHER/CSPARSE/cs_scc.c -text
+OTHER/CSPARSE/cs_schol.c -text
+OTHER/CSPARSE/cs_spsolve.c -text
+OTHER/CSPARSE/cs_sqr.c -text
+OTHER/CSPARSE/cs_symperm.c -text
+OTHER/CSPARSE/cs_tdfs.c -text
+OTHER/CSPARSE/cs_transpose.c -text
+OTHER/CSPARSE/cs_updown.c -text
+OTHER/CSPARSE/cs_usolve.c -text
+OTHER/CSPARSE/cs_util.c -text
+OTHER/CSPARSE/cs_utsolve.c -text
 OTHER/ITPACK/Makefile -text
 OTHER/ITPACK/dsrc2c.f -text
 OTHER/ITPACK/dtst2c.f -text
