Adding concrete MCFT models

--- a/.gitattributes
+++ b/.gitattributes
@@ -2570,6 +2570,10 @@ SRC/material/Material.tex -text
 SRC/material/nD/BeamFiberMaterial.cpp -text
 SRC/material/nD/BeamFiberMaterial.h -text
 SRC/material/nD/BidirectionalMaterial.tex -text
+SRC/material/nD/ConcreteMcftNonLinear5.cpp -text
+SRC/material/nD/ConcreteMcftNonLinear5.h -text
+SRC/material/nD/ConcreteMcftNonLinear7.cpp -text
+SRC/material/nD/ConcreteMcftNonLinear7.h -text
 SRC/material/nD/CycLiqCP.cpp -text
 SRC/material/nD/CycLiqCP.h -text
 SRC/material/nD/CycLiqCP3D.cpp -text
